--- a/fyp.tex
+++ b/fyp.tex
@@ -1,14 +1,40 @@
 \documentclass{report}
-\usepackage{inputenc}
 
-\title{Test Thesis}
+% Packages
+\usepackage[utf8]{inputenc} % For input encoding
+\usepackage{graphicx} % For including images
+\usepackage{setspace} % For setting line spacing
+\usepackage{geometry} % For setting page margins
+\usepackage{lipsum} % For generating placeholder text
+\usepackage{natbib} % For bibliography
+
+% Page margins
+\geometry{
+    a4paper,
+    left=1in,
+    right=1in,
+    top=1in,
+    bottom=1in,
+}
+
+\onehalfspacing
+
+\title{\textbf{Dynamic Programming} \\
+\Large{University College Cork}}
 \author{Konrad Dagiel}
-\date{March 2023}
+\date{April 2023}
 
 \begin{document}
 
 \maketitle
 
-\section{Introduction}
+\chapter*{Abstract}
+A section on what this thesis is about
+
+\chapter*{Declaration}
+
+\chapter*{Acknowledgements}
+
+\tableofcontents
 
 \end{document}
