--- a/fyp.tex
+++ b/fyp.tex
@@ -83,10 +83,12 @@ Throughout this notebook when we refer to Dynamic Programming, we refer to a mor
 
 \tableofcontents
 
-\include{chapters/ch-introduction.tex}
+\include{chapters/ch-introduction.tex} % intro to project
 
-\include{chapters/ch-analysis.tex}
+\include{chapters/ch-analysis.tex} % what the project hopes to achieve
 
-\include{chapters/ch-design.tex}
+\include{chapters/ch-design.tex} % all existing algos
+
+\include{chapters/ch-design-own} % all OG algos
 
 \end{document}
