added benchmarking to report

--- a/fyp.tex
+++ b/fyp.tex
@@ -89,6 +89,8 @@ Throughout this notebook when we refer to Dynamic Programming, we refer to a mor
 
 \include{chapters/ch-design.tex} % all existing algos
 
+\include{chapters/ch-benchmarking} % benchmarking algos
+
 \include{chapters/ch-design-own} % all OG algos
 
 \end{document}
