proof reading all of fibonacci

--- a/fyp.tex
+++ b/fyp.tex
@@ -13,6 +13,7 @@
 \usepackage{amsmath} % For \text command
 \usepackage{float} % For H option
 \usepackage{amsthm}
+\usepackage{tikz} % for trees
 
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}[section]  % Define a new theorem environment called "definition"
