proof read all algos in chap 3

--- a/fyp.tex
+++ b/fyp.tex
@@ -12,7 +12,7 @@
 \usepackage[ruled,vlined]{algorithm2e} % For pseudocode
 \usepackage{amsmath} % For \text command
 \usepackage{float} % For H option
-\usepackage{amsthm}
+\usepackage{amsthm} %for maths expressions
 \usepackage{tikz} % for trees
 
 \theoremstyle{definition}
