fixed the contents page

--- a/fyp.tex
+++ b/fyp.tex
@@ -70,24 +70,26 @@
 
 \pagenumbering{gobble}
 \chapter*{Abstract}
-The outcome of this project is a self-contained, complete guide to dynamic programming which can 
-be accessed by anyone online. The text serves to take a programmer with zero dynamic 
-programming experience and give them a deep understanding of the topic, providing them with
-enough comprehensive knowledge to solve dynamic programming problems on their own.
-This project also proposes solutions to two new dynamic programming problems, The Interstellar Problem I and The Interstellar Problem II.
+This is a research project on the dynamic programming method.
+Starting with no previous experience, the task was to study the dynamic programming method and understand it deeply enough to be able to teach it to an average undergraduate computer science student.
+The outcome of this project is a self-contained, complete guide to dynamic programming which can be accessed by anyone online.
+The guide serves to take a programmer with zero dynamic programming experience and give them a deep understanding of the topic,
+providing them with enough comprehensive knowledge to solve dynamic programming problems on their own.
+This project also proposes several optimizations to existing dynamic programming algorithms,
+as well as solutions to two new dynamic programming problems, The Interstellar Problem I and The Interstellar Problem II.
 
 \chapter*{Declaration}
 Declaration of Originality.\\
 In signing this declaration, you are conforming, in writing, that the submitted work is entirely your own original work, except where clearly attributed otherwise, and that it has not been submitted partly or wholly for
 any other educational award.\\
 I hereby declare that:\\
-• this is all my own work, unless clearly indicated otherwise, with full
+• This is all my own work, unless clearly indicated otherwise, with full
 and proper accreditation;\\
-• with respect to my own work: none of it has been submitted at any educational institution contributing in any way to an educational award;\\
-• with respect to another’s work: all text, diagrams, code, or ideas,\\
-whether verbatim, paraphrased or otherwise modified or adapted, have\\
-been duly attributed to the source in a scholarly manner, whether\\
-from books, papers, lecture notes or any other student’s work, whether\\
+• With respect to my own work: none of it has been submitted at any educational institution contributing in any way to an educational award;\\
+• With respect to another's work: all text, diagrams, code, or ideas,
+whether verbatim, paraphrased or otherwise modified or adapted, have
+been duly attributed to the source in a scholarly manner, whether
+from books, papers, lecture notes or any other student's work, whether
 published or unpublished, electronically or in print.\\
 Signed: Konrad Dagiel\\
 Date: 17/04/2024
