added sources and bibliography section

--- a/fyp.tex
+++ b/fyp.tex
@@ -97,7 +97,7 @@ Date: 17/04/2024
 \chapter*{Acknowledgements}
 Dynamic Programming was originally proposed by Richard Bellman in the 1950s.
 In Bellman's dynamic programming, problems are typically represented using states, actions, and transitions between states.
-Each state represents a specific configuration or situation in the problem domain, and actions define the possible decisions or choices that can be made from each state.
+Each state represents a specific configuration or situation in the problem domain, and actions define the possible decisions or choices that can be made from each state \cite{bellman1954theory}.
 This representation allows for a more structured approach to problem-solving and optimization.
 Throughout this notebook when we refer to Dynamic Programming, we refer to a more general, modernized version of Dynamic Programming.
 
@@ -114,5 +114,8 @@ Throughout this notebook when we refer to Dynamic Programming, we refer to a mor
 \include{chapters/ch-design-own.tex} % all OG algos
 
 \include{chapters/ch-conclusions.tex} % reflection and timeline
+
+\bibliographystyle{plain}
+\bibliography{citations}
 
 \end{document}
