finalized report for submission

--- a/citations.bib
+++ b/citations.bib
@@ -100,3 +100,14 @@ url = {https://www.sciencedirect.com/science/article/pii/B9781785480492500049},
 author = {Jean-Michel Réveillac},
 keywords = {Chain, Dynamic programming, Ehrenfest model, Fibonacci sequence, Graph, Knapsack, Levenshtein distance, Markov chains, Matrix}
 }
+
+@article{kadane2023two,
+  title={Two Kadane Algorithms for the Maximum Sum Subarray Problem},
+  author={Kadane, Joseph B},
+  journal={Algorithms},
+  volume={16},
+  number={11},
+  pages={519},
+  year={2023},
+  publisher={MDPI}
+}
